--- a/index.html
+++ b/index.html
@@ -1,105 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FitHome | HOME</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="Img/FitHomeOrange.svg">
 </head>
-<body class="bodyClass">
-	
-	<main>
-		<div class="divImg">
-			<img width="500px" src="haltere.png" alt="Dumbbell">
-		</div>
+<body>
+    <a href="index.html" class="h1-a"><h1 class="h1-index">FITHOME</h1></a>
 
-		<div class="border-comment">
-			<p class="CommentsDiv">Comments:</p>
-			<div id="Comments"></div>
-			<div class="input-comment">
-				<label for="texte">Add a comment:</label>
-				<div>
-					<input type="text" id="texte">
-					<button type="button" onclick="Submit()">Submit</button>
-				</div>
-			</div>
-		</div>
-		<p id="test" style="display: none;"></p>
-	</main>
-	
-	
-	<script>
-		// fetch("http://localhost:3000/comments",{
-		// 	method: "POST",
-		// 	headers: {"Content-Type": "application/json"},
-		// 	body: JSON.stringify({"id": 2, "title": "json-server", "author": "typicode"})
-		// }).then(function(
-		// 	response
-		// ){
-		// 	console.log(response)
-		// 	return response.json()
-		// }).then(function(
-		// 	data
-		// ){
-		// 	console.log(data)
-		// })
+    <header class="header-shop">
+        <nav>
+            <ul>
+                <li class="current-page"><a href="index.html">HOME</a></li>
+                <li><a href="shop.html">SHOP</a></li>
+                <li><a href="#">CONTACT US</a></li>
+                <li><a href="#"><img src="Img/user.png" alt="Login" width="20px" style="margin-right: 5px;">Login</a></li>
+                <li><a href="shoppingCart.html"><img src="Img/card.png" alt="Shopping cart" width="20px"></a></li>
+            </ul>
+        </nav>
+        <div class="info-index">
+            <div class="detail-info-index">
+                <h2>Welcome To Our Shop</h2>
+                <p class="justify-index">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam fugit assumenda omnis perspiciatis id ipsum ullam possimus, optio autem necessitatibus, est eligendi enim! Dolore odio, cumque nihil fugiat omnis quaerat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolores autem quia quae eos accusamus provident debitis fugit esse, assumenda vero illo ut quas ab perferendis iste ipsum consequuntur impedit.</p>
+                <a href="#" class="contact-index">CONTACT US</a>
+            </div>
+            <div>
+                <!-- <img src="Img/FitHomeOrange.svg" alt="Logo FitHome"> -->
+                <object data="Img/FitHomeOrange.svg" type="image/svg+xml" width="300px"></object>
+            </div>
+        </div>
+    </header>
 
-		fetch("http://localhost:3000/comments").then(function(response){
-			return response.json()
-		}).then(function(data){
-			for(let i = 0; i < data.length; i++){
-				let newP = document.createElement("p")
-				newP.textContent = data[i]["content"];
+    <main class="main-index">
+        <div>
+            <h2>LATEST PRODUCTS</h2>
+            <div id="latest-products">
+                
+            </div>
+            <a href="shop.html" class="all-product">View All Products</a>
+        </div>
 
-				let newButton = document.createElement("img")
-				newButton.src = "téléchargement.png"
-				newButton.style.cursor = "pointer"
-				newButton.style.width = "25px"
-				newButton.style.marginLeft = "15px"
-				newButton.setAttribute("onclick", `Delete(${data[i]["id"]})`)
+        <div>
+            <h2>WHY SHOP WITH US</h2>
+            <div class="info-index2">
+                <div class="info-index3">
+                    <img src="Img/delivery.png" alt="LogoDelivery" width="50px">
+                    <p>Fast Delivery</p>
+                </div>
+                <div class="info-index3">
+                    <img src="Img/free.png" alt="LogoFreeShiping" width="50px">
+                    <p>Free Shiping</p>
+                </div>
+                <div class="info-index3">
+                    <img src="Img/best.png" alt="LogoBestQuality" width="50px">
+                    <p>Best Quality</p>
+                </div>
+            </div>
+        </div>
+    </main>
 
-				let newDiv = document.createElement("div")
-				newDiv.style.display = "flex"
-				newDiv.style.margin = "15px 0"
-				newDiv.append(newP)
-				newDiv.append(newButton)
-				newDiv.style.alignItems = "center"
-				newDiv.style.borderBottom = "1px solid gray"
+    <footer class="footer-index">
+        <nav>
+            <ul>
+                <li><a href="#"><img src="Img/facebook.png" alt="Facebook" width="35px"></a></li>
+                <li><a href="#"><img src="Img/twitter.png" alt="Twitter" width="35px"></a></li>
+                <li><a href="#"><img src="Img/instagram.png" alt="Instagram" width="35px"></a></li>
+                <li><a href="#"><img src="Img/youtube.png" alt="Youtube" width="35px"></a></li>
+            </ul>
+        </nav>
+        <div>
+            <ul class="wrap-index">
+                <li><img src="Img/place.png" alt="Place" width="30px">road 123 barcelona ES</li>
+                <li><img src="Img/tel.png" alt="Tel" width="30px">+34 675 569 325</li>
+                <li><img src="Img/mail.png" alt="mail" width="30px">contact@fithome.com</li>
+            </ul>
+        </div>
+    </footer>
 
-
-				document.getElementById("Comments").append(newDiv);
-				console.log(newButton)
-				if(i == data.length-1){
-					let ids = data[i]["id"]
-					console.log(ids)
-					document.getElementById("test").innerText = ids
-				}
-			}
-		})
-
-		function Submit(){
-			let comment = document.getElementById("texte").value;
-			console.log(document.getElementById("test"))
-			fetch("http://localhost:3000/comments", {
-				method: "POST",
-				headers: {"Content-Type": "application/json"},
-				body: JSON.stringify({"id": document.getElementById("test").value+1, "content": comment})
-			}).then(function(response){
-			}).then(function(data){
-				location.reload()
-			})
-		}
-
-		function Delete(idToDelete){
-			fetch(`http://localhost:3000/comments/${idToDelete}`, {
-				method: "DELETE"
-			}).then(function(response){
-			}).then(function(data){
-				location.reload()
-			})
-		}
-		
-		
-	</script>
+    <script src="JavaScript/index.js"></script>
 </body>
 </html>
