--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -8,7 +8,11 @@
     <link rel="shortcut icon" href="Img/FitHomeBlue.png">
 </head>
 <body>
-    <a href="index.html" class="h1-a"><h1 class="h1-shop">FITHOME</h1></a>
+    <a href="index.html" class="h1-a">
+        <!-- <object data="Img/FitHomeOrange.svg" type="image/svg+xml" width="100px"></object> -->
+        <img src="Img/FitHomeOrange.svg" alt="Logo" width="75px">
+        <h1 class="h1-index">FITHOME</h1>
+    </a>
     <header class="header-shop">
         <nav>
             <ul>
@@ -40,7 +44,7 @@
         </table>
 
         <div>
-            <a href="#">Pay</a>
+            <a href="#" class="all-product">Pay</a>
         </div>
     </main>
 
