--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="shortcut icon" href="Img/FitHomeOrange.svg">
 </head>
 <body>
-    <a href="index.html" class="h1-a"><h1 class="h1-index">FITHOME</h1></a>
+    <a href="index.html" class="h1-a">
+        <!-- <object data="Img/FitHomeOrange.svg" type="image/svg+xml" width="100px"></object> -->
+        <img src="Img/FitHomeOrange.svg" alt="Logo" width="75px">
+        <h1 class="h1-index">FITHOME</h1>
+    </a>
 
     <header class="header-shop">
         <nav>
@@ -23,7 +27,7 @@
         <div class="info-index">
             <div class="detail-info-index">
                 <h2>Welcome To Our Shop</h2>
-                <p class="justify-index">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam fugit assumenda omnis perspiciatis id ipsum ullam possimus, optio autem necessitatibus, est eligendi enim! Dolore odio, cumque nihil fugiat omnis quaerat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolores autem quia quae eos accusamus provident debitis fugit esse, assumenda vero illo ut quas ab perferendis iste ipsum consequuntur impedit.</p>
+                <p class="justify-index">Welcome to our e-commerce site dedicated to the world of sport, the perfect place for all enthusiasts of physical activity and well-being. Here you'll find a wide range of high-quality sporting goods, designed to help you achieve your goals, whether you're a professional athlete or an enthusiastic amateur. Our carefully chosen selection includes equipment and accessories for a variety of sporting disciplines, from fitness and yoga to strength training and more. Our mission is to provide you with the tools you need to excel in your passion, while guaranteeing an exceptional online shopping experience. Discover our collection and get ready for an unforgettable sporting adventure.</p>
                 <a href="#" class="contact-index">CONTACT US</a>
             </div>
             <div>
