--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,11 @@
     <link rel="shortcut icon" href="Img/FitHomeBlue.png">
 </head>
 <body>
-    <a href="index.html" class="h1-a"><h1 class="h1-shop">FITHOME</h1></a>
+    <a href="index.html" class="h1-a">
+        <!-- <object data="Img/FitHomeOrange.svg" type="image/svg+xml" width="100px"></object> -->
+        <img src="Img/FitHomeOrange.svg" alt="Logo" width="75px">
+        <h1 class="h1-index">FITHOME</h1>
+    </a>
     <header class="header-shop">
         <nav>
             <ul>
@@ -23,7 +27,13 @@
 
     <main>
         <h2 class="h2-product">OUR PRODUCTS</h2>
+        <h2 class="h2-product">Sport Equipment</h2>
         <div id="our-products">
+
+        </div>
+
+        <h2 class="h2-product">Exercise Machines</h2>
+        <div id="our-products2">
 
         </div>
     </main>
