--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -44,7 +44,7 @@
         </table>
 
         <div>
-            <a href="#" class="all-product">Pay</a>
+            <a href="https://buy.stripe.com/5kAeVfcqY4hBc6Y5kk" class="all-product">Pay</a>
         </div>
     </main>
 
